--- a/software.html
+++ b/software.html
@@ -56,7 +56,7 @@
 <p> miProfile is a command-line program written in the C language to implement the new distance-based method described in Tang et al. 2016a for performing association test for microbial community composition with any covariates of interest (e.g., environmental factors, disease status, clinical outcomes, treatment groups). miProfile can construct all commonly-used distances, including unweighted UniFrac, weighted UniFrac, generalized UniFrac, presence-weighted UniFrac, Bray-Curtis distance, and Jaccard distance. Users can request any combination of these distances. miProfile produces the p-value for each of the requested distances and the unified p-value by combining all of the distances. The operating interface is simple and can directly input the .biom and .tre files. The OTU abundance table and the distance matrices can be generated as output and re-used in subsequent runs. </p>
 <p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com/bioinformatics/article/32/17/2618/2450751/PERMANOVA-S-association-test-for-microbial?searchresult=1">Tang ZZ <i>et al.</i> 2016a </a>.</p>
 <footer class="controls">
-<a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miProfile_v1.0" class="button"><font style="text-transform: none;"> Download miProfile v1.0 </font></a>
+<a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miProfile_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miProfile v1.0 </font></a>
 </footer>
 </section>
 
