--- a/software.html
+++ b/software.html
@@ -46,7 +46,7 @@
 <p><strong><font size="5">miLineage: An R package to perform association tests for microbial lineages on a taxonomic tree. </font></strong></p>
 <p>miLineage package has functions that implement a variety of association tests for microbiome data.
 These functions allow users to (a) perform tests on multivariate taxon counts; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community with the covariate of interest.</p>
-<p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead"> Tang ZZ <i>et al.</i> 2016b </a>.</p>
+<p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead"> Tang ZZ <i>et al.</i> 2017 </a>.</p>
 <footer class="controls">
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miLineage_v2.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miLineage v2.0 </font></a>
 </footer>
@@ -55,7 +55,7 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 <section>
 <p><strong><font size="5">miProfile: A C program for analyzing&nbsp;microbial community composition.</font></strong></p>
 <p> miProfile is a command-line program written in the C language to implement the new distance-based method described in Tang et al. 2016a for performing association test for microbial community composition with any covariates of interest (e.g., environmental factors, disease status, clinical outcomes, treatment groups). miProfile can construct all commonly-used distances, including unweighted UniFrac, weighted UniFrac, generalized UniFrac, presence-weighted UniFrac, Bray-Curtis distance, and Jaccard distance. Users can request any combination of these distances. miProfile produces the p-value for each of the requested distances and the unified p-value by combining all of the distances. The operating interface is simple and can directly input the .biom and .tre files. The OTU abundance table and the distance matrices can be generated as output and re-used in subsequent runs. </p>
-<p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com/bioinformatics/article/32/17/2618/2450751/PERMANOVA-S-association-test-for-microbial?searchresult=1">Tang ZZ <i>et al.</i> 2016a </a>.</p>
+<p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com/bioinformatics/article/32/17/2618/2450751/PERMANOVA-S-association-test-for-microbial?searchresult=1">Tang ZZ <i>et al.</i> 2016 </a>.</p>
 <footer class="controls">
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miProfile_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miProfile v1.0 </font></a>
 </footer>
