--- a/software.html
+++ b/software.html
@@ -46,7 +46,7 @@
 <p><strong><font size="5">miLineage: An R package to perform association tests for microbial lineages on a taxonomic tree. </font></strong></p>
 <p>miLineage package has functions that implement a variety of association tests for microbiome data.
 These functions allow users to (a) perform tests on multivariate taxon counts; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community with the covariate of interest.</p>
-<p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead"> Tang ZZ <i>et al.</i> 2017 </a>.</p>
+<p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead"> Tang ZZ <i>et al.</i> 2017 </a>, <a href="https://tangzheng1.github.io/tanglab/publications.html">Tang ZZ & Chen G Submitted</a></p>
 <footer class="controls">
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miLineage_v2.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miLineage v2.0 </font></a>
 </footer>
