--- a/software.html
+++ b/software.html
@@ -41,7 +41,7 @@
 						<div class="12u">
 
 						<h2>Software</h2>
-							<p> Use Firefox or Explorer to download. Chrome may have problem. </p>
+							<p><i> Use Firefox or Explorer to download. Chrome may have problem. </i></p>
 		
 <section>
 <p><strong><font size="5">miLineage: An R package to perform association tests for microbial lineages on a taxonomic tree. </font></strong></p>
