--- a/people.html
+++ b/people.html
@@ -44,7 +44,7 @@
 						
 					<img src="images/PI.JPG" alt="" class="left" width="275" />
 					<h3>ZhengZheng (Jane) Tang</h3>
-					<p> ZhengZheng is an assistant professor in the Department of Biostatistics and Medical Informatics at the University of Wisconsin-Madison as well as an investigator at the Wisconsin Discovery Institute.  </p>
+					<p> ZhengZheng is an Assistant Professor in the Department of Biostatistics and Medical Informatics at the University of Wisconsin-Madison as well as a Residence Discovery Fellow at the Wisconsin Institute for Discovery.  </p>
                                         <p> ZhengZheng's contact information can be found at the bottom of the page. </p>
 
 						</div>
