--- a/software.html
+++ b/software.html
@@ -50,7 +50,7 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 <p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead"> Tang ZZ <i>et al.</i> 2017 </a>, <a href="https://tangzheng1.github.io/tanglab/publications.html">Tang ZZ & Chen G Submitted</a></p>
 <footer class="controls">
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miLineage_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miLineage v1.0 </font></a>
-<a href="https://cran.r-project.org/web/packages/miLineage/" class="button" download="download"><font style="text-transform: none;"> Download miLineage v2.0 from CRAN</font></a>
+<a href="https://cran.r-project.org/web/packages/miLineage/" class="button"><font style="text-transform: none;">miLineage v2.0 at CRAN</font></a>
 </footer>
 </section>
 	
