--- a/software.html
+++ b/software.html
@@ -60,6 +60,7 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 <p><strong><font size="5">References:</font></strong><a href="https://academic.oup.com/bioinformatics/article/32/17/2618/2450751/PERMANOVA-S-association-test-for-microbial?searchresult=1">Tang ZZ <i>et al.</i> 2016 </a>.</p>
 <footer class="controls">
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miProfile_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miProfile v1.0 </font></a>
+<a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miProfile_v2.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miProfile v2.0 </font></a>
 </footer>
 </section>
 
