--- a/people.html
+++ b/people.html
@@ -42,7 +42,7 @@
 
 						<h2>People</h2>
 						
-					<ul class="image-list">
+					<ul class="small-image-list">
 					<li>
 					<img src="images/PI.JPG" alt="" class="left" width="275" />
 					<h3>ZhengZheng (Jane) Tang</h3>
