--- a/people.html
+++ b/people.html
@@ -50,7 +50,7 @@
 					</li>
 						
 					<li>
-					<img src="images/BiCheng.jpg" alt="" class="left" width="300"  />
+					<img src="images/BiCheng.PNG" alt="" class="left" width="300"  />
 					<h3>Bi Cheng Wu</h3>
 					<p> Graduate Student in the Department of Statistics. bwu62@wisc.edu  </p>
                                         </li>
