--- a/software.html
+++ b/software.html
@@ -51,6 +51,8 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 <footer class="controls">
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miLineage_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miLineage v1.0 </font></a>
 <a href="https://cran.r-project.org/web/packages/miLineage/" class="button"><font style="text-transform: none;">miLineage v2.0 at CRAN</font></a>
+<a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miLineage_v2.2.zip" class="button" download="download"><font style="text-transform: none;"> Download miLineage v2.2 </font></a>
+</footer>
 </footer>
 </section>
 	
