--- a/publications.html
+++ b/publications.html
@@ -43,8 +43,8 @@
 						<h2>Publications</h2>
 				
 <p><a href=""><strong>Zero-Inflated Generalized Dirichlet Multinomial Regression Model for Microbiome Compositional Data Analysis.</strong></a><br>
-<strong>Tang ZZ</strong> and Chen G (2017).<br>
-<em>Submitted.</em></p>
+<strong>Tang ZZ</strong> and Chen G (2018).<br>
+<em>Biostatistics, Accepted.</em></p>
 							
 <p><a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-017-3573-1"><strong>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</strong></a><br>
 <strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).<br>
