--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 
 						<h2>Publications</h2>
 				
-<p><a href=""><strong>Zero-Inflated Generalized Dirichlet Multinomial Regression Model for Microbiome Compositional Data Analysis.</strong></a><br>
+<p><a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/publications/ZIGDM.pdf"><strong>Zero-Inflated Generalized Dirichlet Multinomial Regression Model for Microbiome Compositional Data Analysis.</strong></a><br>
 <strong>Tang ZZ</strong> and Chen G (2018).<br>
 <em>Biostatistics, Accepted.</em></p>
 							
