--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 				
 <p><a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/publications/ZIGDM.pdf"><strong>Zero-Inflated Generalized Dirichlet Multinomial Regression Model for Microbiome Compositional Data Analysis.</strong></a><br>
 <strong>Tang ZZ</strong> and Chen G (2018).<br>
-<em>Biostatistics, Accepted.</em></p>
+<em>Biostatistics, accepted.</em></p>
 							
 <p><a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-017-3573-1"><strong>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</strong></a><br>
 <strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).<br>
