--- a/publications.html
+++ b/publications.html
@@ -42,17 +42,17 @@
 
 						<h2>Publications</h2>
 				
-<p><a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/publications/ZIGDM.pdf"><strong>Zero-Inflated Generalized Dirichlet Multinomial Regression Model for Microbiome Compositional Data Analysis.</strong></a><br>
+<p><a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/publications/ZIGDM.pdf"><strong>Zero-inflated generalized Dirichlet multinomial regression model for microbiome compositional data analysis.</strong></a><br>
 <strong>Tang ZZ</strong> and Chen G (2018).<br>
 <em>Biostatistics, accepted.</em></p>
 							
 <p><a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-017-3573-1"><strong>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</strong></a><br>
 <strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).<br>
-<em>BMC Genomics</em>.&nbsp;DOI: 10.1186/s12864-017-3573-1.</p>
+<em>BMC Genomics</em>,&nbsp;DOI: 10.1186/s12864-017-3573-1.</p>
 
 <p><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead"><strong>A general framework for association analysis of microbial communities on a taxonomic tree.</strong></a><br>
 <strong>Tang ZZ</strong>, Chen G, Alekseyenko AV, Li H (2017).<br>
-<em>Bioinformatics</em>. 33, 1278-1285.</p>
+<em>Bioinformatics</em>, 33, 1278-1285.</p>
 
 <p><a href="https://academic.oup.com/bioinformatics/article/32/17/2618/2450751/PERMANOVA-S-association-test-for-microbial?searchresult=1"><strong>PERMANOVA-S:&nbsp;Association test for microbial community composition that accommodates confounders and multiple distances.</strong></a><br>
 <strong>Tang ZZ</strong>,&nbsp;Chen G,&nbsp;Alekseyenko&nbsp;AV&nbsp;(2016).<br>  
