--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,10 @@
 
 						<h2>Publications</h2>
 				
+<p><a href=""><strong>Cost-effectiveness Analysis of Magnetic Resonance Imaging-Conditional Pacemaker Implantation: Insights from a Multicenter Study and Implications in the Current Era.</strong></a><br>
+Mar PL, Chen G, Gandhi G, <strong>Tang ZZ</strong>, ..., Granato JE, and Gopinathannair R (2018).<br>
+<em>Heart Rhythm, accepted.</em></p>
+							
 <p><a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/publications/ZIGDM.pdf"><strong>Zero-inflated generalized Dirichlet multinomial regression model for microbiome compositional data analysis.</strong></a><br>
 <strong>Tang ZZ</strong> and Chen G (2018).<br>
 <em>Biostatistics, accepted.</em></p>
