--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 
 						<h2>Publications</h2>
 				
-<p><a href=""><strong>Cost-effectiveness Analysis of Magnetic Resonance Imaging-Conditional Pacemaker Implantation: Insights from a Multicenter Study and Implications in the Current Era.</strong></a><br>
+<p><a href=""><strong>Cost-effectiveness analysis of magnetic resonance imaging-conditional pacemaker implantation: insights from a multicenter study and implications in the current era.</strong></a><br>
 Mar PL, Chen G, Gandhi G, <strong>Tang ZZ</strong>, ..., Granato JE, and Gopinathannair R (2018).<br>
 <em>Heart Rhythm, accepted.</em></p>
 							
