--- a/publications.html
+++ b/publications.html
@@ -42,13 +42,13 @@
 
 						<h2>Publications</h2>
 		
-<p><a href="https://www.heartrhythmjournal.com/article/S1547-5271(18)30511-3/fulltext"><strong>Close social relationships correlate with human gut microbiome composition.</strong></a><br>
+<p><a href=""><strong>Close social relationships correlate with human gut microbiome composition.</strong></a><br>
 Dill-Mcfarland K, <strong>Tang ZZ</strong>, ..., Rey F, and Herd P (2018).<br>
 <em>Scientific Reports, in press.</em></p>
 							
 <p><a href="https://www.heartrhythmjournal.com/article/S1547-5271(18)30511-3/fulltext"><strong>Cost-effectiveness analysis of magnetic resonance imaging-conditional pacemaker implantation: insights from a multicenter study and implications in the current era.</strong></a><br>
 Mar PL, Chen G, Gandhi G, <strong>Tang ZZ</strong>, ..., Granato JE, and Gopinathannair R (2018).<br>
-<em>Heart Rhythm, in press.</em></p>
+<em>Heart Rhythm, doi: 10.1016/j.hrthm.2018.05.024.</em></p>
 							
 <p><a href="https://academic.oup.com/biostatistics/advance-article/doi/10.1093/biostatistics/kxy025/5043450?guestAccessKey=a2b725dd-0593-482d-a27c-ee7fb6913a12"><strong>Zero-inflated generalized Dirichlet multinomial regression model for microbiome compositional data analysis.</strong></a><br>
 <strong>Tang ZZ</strong> and Chen G (2018).<br>
