--- a/publications.html
+++ b/publications.html
@@ -81,7 +81,7 @@ Stitziel NO, Won HH, Morrison AC, Peloso GM, Do R, ..., <strong>Tang ZZ</strong>
 Crosby J, Peloso GM, Auer PL, Crosslin D, Stitziel NO, Lange LA, Lu K,<strong>Tang ZZ</strong>, ..., Reiner AP, Boerwinkle E, Kathiresan S (2014).<br>
 <em>New England Journal of Medicine</em>, 235(2):e30-e31.</p>
 
-<p><a href="http://www.nejm.org/doi/full/10.1056/NEJMoa1307095"><strong>Novel rare and low frequency coding variants associated with LDL cholesterol.</strong></a><br> 
+<p><a href="https://www.sciencedirect.com/science/article/pii/S0002929714000111?via%3Dihub"><strong>Whole-exome sequencing identifies rare and low-frequency coding variants associated with LDL cholesterol.</strong></a><br> 
 Lange LA, Hu Y, Zhang H, Xue C, Schmidt EM,<strong>Tang ZZ</strong>, ..., Willer CJ (2014). <br>
 <em>American Journal of Human Genetics</em>, 94, 233-245.</p>
 
