--- a/software.html
+++ b/software.html
@@ -41,7 +41,17 @@
 						<div class="12u">
 
 						<h2>Software</h2>
-		
+	
+<section>
+<p><strong><font size="5">PSCAN: An R package to perform protein-structure-based scan tests for detecting rare-variant associations and signal regions. </font></strong></p>
+<p>PSCAN is a new set of gene-level association tests that leverage the tendency of functional variants to cluster in 3D protein space. 
+PSCAN tests are built upon flexibly shaped spatial scan statistics, with scan windows adaptively defined to accommodate diverse topologies of variant positions in protein space. 
+In addition, PSCAN implements a computationally efficient search algorithm for the detection of multiple
+non-overlapping signal regions in protein space.</p>
+<a href="https://uwmadison.box.com/shared/static/198njl5v51g78021jroo04ywptuw1zsu.zip" class="button" download="download"><font style="text-transform: none;"> Download PSCAN v1.0 </font></a>
+</footer>
+</section>
+							
 <section>
 <p><strong><font size="5">miLineage: An R package to perform association tests for microbial lineages on a taxonomic tree. </font></strong></p>
 <p>miLineage package has functions that implement a variety of association tests for microbiome data.
@@ -51,7 +61,6 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miLineage_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miLineage v1.0 </font></a>
 <a href="https://cran.r-project.org/web/packages/miLineage/" class="button"><font style="text-transform: none;">miLineage v2.0 at CRAN</font></a>
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/miLineage_v3.0.zip" class="button" download="download"><font style="text-transform: none;"> Download miLineage v3.0 </font></a>
-</footer>
 </footer>
 </section>
 	
