--- a/software.html
+++ b/software.html
@@ -48,7 +48,7 @@
 PSCAN tests are built upon flexibly shaped spatial scan statistics, with scan windows adaptively defined to accommodate diverse topologies of variant positions in protein space. 
 In addition, PSCAN implements a computationally efficient search algorithm for the detection of multiple
 non-overlapping signal regions in protein space.</p>
-<a href="https://uwmadison.box.com/shared/static/198njl5v51g78021jroo04ywptuw1zsu.zip" class="button" download="download"><font style="text-transform: none;"> Download PSCAN v1.0 </font></a>
+<a href="https://uwmadison.box.com/s/198njl5v51g78021jroo04ywptuw1zsu" class="button" download="download"><font style="text-transform: none;"> Download PSCAN v1.0 </font></a>
 </footer>
 </section>
 							
