--- a/software.html
+++ b/software.html
@@ -43,7 +43,7 @@
 						<h2>Software</h2>
 	
 <section>
-<p><strong><font size="5">PSCAN: An R package to perform protein-structure-based scan tests for detecting rare-variant associations and signal regions. </font></strong></p>
+<p><strong><font size="5">PSCAN: An R package to perform protein-structure-based scan tests for detecting gene-level associations and signal regions. </font></strong></p>
 <p>PSCAN is a new set of gene-level association tests that leverage the tendency of functional variants to cluster in 3D protein space. 
 PSCAN tests are built upon flexibly shaped spatial scan statistics, with scan windows adaptively defined to accommodate diverse topologies of variant positions in protein space. 
 In addition, PSCAN implements a computationally efficient search algorithm for the detection of multiple
