--- a/people.html
+++ b/people.html
@@ -44,7 +44,7 @@
 						
 					<ul class="small-image-list">
 					<li>
-					<img src="images/PI.JPG" alt="" class="left" width="600" />
+					<img src="images/PI.JPG" alt="Image" class="left" height="400" width="600"  />
 					<h3>ZhengZheng (Jane) Tang</h3>
 					<p> Assistant Professor in the Department of Biostatistics and Medical Informatics at the University of Wisconsin-Madison and a Resident Discovery Fellow at the Wisconsin Institute for Discovery. Contact information can be found at the bottom of the page.  </p>
 					</li>
