--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 
 						<h2>Publications</h2>
 		
-<p><a href=""><strong>Close social relationships correlate with human gut microbiome composition.</strong></a><br>
+<p><a href="https://www.nature.com/articles/s41598-018-37298-9"><strong>Close social relationships correlate with human gut microbiome composition.</strong></a><br>
 Dill-Mcfarland K, <strong>Tang ZZ</strong>, ..., Rey F, and Herd P (2018).<br>
 <em>Scientific Reports, in press.</em></p>
 							
