--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 
 						<h2>Publications</h2>
 		
-<p><a href=""><strong>Robust and powerful differential composition tests for clustered microbiome data.</strong></a><br>
+<p><a href="https://link.springer.com/article/10.1007/s12561-019-09251-5"><strong>Robust and powerful differential composition tests for clustered microbiome data.</strong></a><br>
 <strong>Tang ZZ</strong> and Chen G(2019).<br>
 <em>Statistics in Biosciences, accepted.</em></p>
 							
