--- a/software.html
+++ b/software.html
@@ -43,6 +43,14 @@
 						<h2>Software</h2>
 	
 <section>
+<p><strong><font size="5">MTAR: An R package to perform multi-trait analysis of rare-variant associations. </font></strong></p>
+<p>MTAR is a framework for joint analysis of association summary statistics between multiple rare variants and different
+traits, possibly from overlapping samples. MTAR tests accommodate a wide variety of association patterns across traits and variants and enrich their associations.</p>
+<a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/MTAR_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download MTAR v1.0 </font></a>
+</footer>
+</section>
+						
+<section>
 <p><strong><font size="5">PSCAN: An R package to perform protein-structure-based scan tests for detecting gene-level associations and signal regions. </font></strong></p>
 <p>PSCAN is a new set of gene-level association tests that leverage the tendency of functional variants to cluster in 3D protein space. 
 PSCAN tests are built upon flexibly shaped spatial scan statistics, with scan windows adaptively defined to accommodate diverse topologies of variant positions in protein space. 
