--- a/software.html
+++ b/software.html
@@ -45,7 +45,8 @@
 <section>
 <p><strong><font size="5">MTAR: An R package to perform multi-trait analysis of rare-variant associations. </font></strong></p>
 <p>MTAR is a framework for joint analysis of association summary statistics between multiple rare variants and different
-traits, possibly from overlapping samples. MTAR tests accommodate a wide variety of association patterns across traits and variants and enrich their associations.</p>
+traits, possibly from overlapping samples. MTAR tests leverage the genetic correlations to accommodate a wide variety of association patterns across traits and variants and enrich their associations.
+Numerical study demonstrates that MTAR is substantially more powerful than single-trait-based tests and highlights the value of MTAR for novel pleiotropic gene discovery.</p>
 <a href="https://github.com/tangzheng1/tanglab/blob/gh-pages/software/MTAR_v1.0.zip" class="button" download="download"><font style="text-transform: none;"> Download MTAR v1.0 </font></a>
 </footer>
 </section>
