--- a/software.html
+++ b/software.html
@@ -28,6 +28,7 @@
 									<a href="publications.html"><font style="text-transform: none;"> Publications </font></a>
 									<a href="software.html" class="current-page-item"><font style="text-transform: none;"> Software </font></a>
 									<a href="people.html"><font style="text-transform: none;"> People </font></a>
+									<a href="jobs.html"><font style="text-transform: none;"> Jobs </font></a>
 								</nav>
 							</header>
 
@@ -171,7 +172,7 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 						<div class="12u">
 
 							<div id="copyright">
-								&copy; ZhengZheng Tang 2017. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a> | Last updated July 1, 2017
+								&copy; Tang Lab 2020. All rights reserved.
 							</div>
 
 						</div>
