--- a/software.html
+++ b/software.html
@@ -53,11 +53,12 @@ Numerical study demonstrates that MTAR is substantially more powerful than singl
 </section>
 						
 <section>
-<p><strong><font size="5">PSCAN: An R package to perform protein-structure-based scan tests for detecting gene-level associations and signal regions. </font></strong></p>
+<p><strong><font size="5">PSCAN: An R package to perform protein-structure-guided scan tests for detecting gene-level associations and signal regions. </font></strong></p>
 <p>PSCAN is a new set of gene-level association tests that leverage the tendency of functional variants to cluster in 3D protein space. 
-PSCAN tests are built upon flexibly shaped spatial scan statistics, with scan windows adaptively defined to accommodate diverse topologies of variant positions in protein space. 
+PSCAN tests are built upon flexibly shaped spatial scan statistics, with scan windows adaptively defined to accommodate diverse topologies of variant positions in protein space.
+PSCAN performs fast gene-level association tests by combining SNP-set-based testing p-values across windows using Cauchy method. 	
 In addition, PSCAN implements a computationally efficient search algorithm for the detection of multiple
-non-overlapping signal regions in protein space.</p>
+signal regions in protein space.</p>
 <a href="https://uwmadison.box.com/s/198njl5v51g78021jroo04ywptuw1zsu" class="button" download="download"><font style="text-transform: none;"> Download PSCAN v1.0 </font></a>
 </footer>
 </section>
