--- a/software.html
+++ b/software.html
@@ -53,7 +53,7 @@ Numerical study demonstrates that MTAR is substantially more powerful than singl
 </section>
 						
 <section>
-<p><strong><font size="5">PSCAN: An R package to perform protein-structure-guided scan tests for detecting gene-level associations and signal regions. </font></strong></p>
+<p><strong><font size="5">PSCAN: An R package to perform protein-structure-guided scan (PSCAN) method for testing gene-level associations and identifying signal regions. </font></strong></p>
 <p>PSCAN is a new set of gene-level association tests and signal variant detection methods that leverage the tendency of functional variants to cluster in 3D protein space. 
 PSCAN methods are built upon flexibly shaped spatial scan statistics, with scan windows adaptively defined to accommodate diverse topologies of variant positions in protein space.
 PSCAN performs fast gene-level association tests by combining SNP-set-based testing p-values across windows using Cauchy method. 	
