--- a/people.html
+++ b/people.html
@@ -55,6 +55,11 @@
 					
 	                <br style = “line-height:10;”>
 				    <p> 
+					<h3>Zhoujingpeng Wei</h3>
+					MS Student in Biostatistics and Medical Informatics. zwei74@wisc.edu
+                    </p> 
+					
+				    <p> 
 					<h3>Qilin (Kirin) Hong</h3>
 					PhD Student in Biostatistics and Medical Informatics. qhong8@wisc.edu  
                     </p> 
