--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
 *Luo L, Shen J, Zhang H, Chhibber A, Mehrotra DV, <strong>Tang ZZ</strong>(2020).<br>   
 <em>Nature Communications</em>, accepted.</p>
 	
-<p><a href=""><strong>Expression quantitative trait locus fine mapping of the 17q12–21 asthma locus in African American children: a genetic association and gene expression study
+<p><a href="https://www.sciencedirect.com/science/article/abs/pii/S2213260020300114"><strong>Expression quantitative trait locus fine mapping of the 17q12–21 asthma locus in African American children: a genetic association and gene expression study
 .</strong></a><br>
 Ober C, ..., <strong>ECHO-CREW investigators</strong> (2020).<br>   
 <em>The Lancet Respiratory Medicine</em>, 8(5), 482-492.</p>
