--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@ Ferguson JF, Aden LA, Barbaro NR, Van Beusecum JP, Xiao L, Simons AJ, Warden C, 
 <em>JCI Insight, doi: 10.1172/jci.insight.126241.</em></p>
 							
 <p><a href="https://www.frontiersin.org/articles/10.3389/fgene.2019.00454/full"><strong>Multi-omic analysis of the microbiome and metabolome in healthy subjects reveals microbiome-dependent relationships between diet and metabolites.</strong></a><br>
-<strong>Tang ZZ</strong>, Chen G, Hong Q, Huang S, Smith HM, Shah RD, Scholz MB, Ferguson JF (2019).<br>
+<strong>Tang ZZ</strong>, Chen G, *Hong Q, Huang S, Smith HM, Shah RD, Scholz MB, Ferguson JF (2019).<br>
 <em>Frontiers in Genetics, 10:454.</em></p>
 							
 <p><a href="https://www.nature.com/articles/s41598-018-37298-9"><strong>Close social relationships correlate with human gut microbiome composition.</strong></a><br>
