--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 														<section>
 							<h2>News</h2>
-							        <p> 05/09/2020 Lan's MTAR paper has been accepted in Nature Communications. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: https://cran.r-project.org/web/packages/MTAR.				
+							        <p> 05/09/2020 Lan's MTAR paper has been accepted in <i> Nature Communications </i>. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: https://cran.r-project.org/web/packages/MTAR.				
 								<p> 02/27/2020 Lan Luo won ENAR and ASA Distinguished Student Paper Awards. Congrats, Lan!
 							</section>
 							
