--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 														<section>
 							<h2>News</h2>
-							        <li> 05/09/2020 Lan's MTAR paper has been accepted in <em>Nature Communications</em>. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: <a href="url">https://cran.r-project.org/web/packages/MTAR</a>.</li>				
+							        <li> 05/09/2020 Lan's MTAR paper has been accepted in <strong>Nature Communications</strong>. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: <a href="url">https://cran.r-project.org/web/packages/MTAR</a>.</li>				
 								<li> 02/27/2020 Lan Luo won ENAR and ASA Distinguished Student Paper Awards. Congrats, Lan!</li>
 									
 							
