--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 								<p> Our group focuses on the development and application of statistical methods and computational tools for high-dimensional "omics" data, arising from modern high-throughput technologies. Our current research interests include developing novel methods for integrating functional information in genetic association studies, meta-analysis for sequencing studies, and analysis of microbiome & metagenomic data.</p>
 							</section>
 
-														<section>
+						        <section>
 							<h2>News</h2>
-							        05/09/2020 Lan's MTAR paper has been accepted in <strong>Nature Communications</strong>. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: <a href="https://cran.r-project.org/web/packages/MTAR">https://cran.r-project.org/web/packages/MTAR</a>.							
-								02/27/2020 Lan Luo won ENAR and ASA Distinguished Student Paper Awards. Congrats, Lan!
+							        <li>05/09/2020 Lan's MTAR paper has been accepted in <strong>Nature Communications</strong>. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: <a href="https://cran.r-project.org/web/packages/MTAR">https://cran.r-project.org/web/packages/MTAR</a>.</li>							
+								<li>02/27/2020 Lan Luo won ENAR and ASA Distinguished Student Paper Awards. Congrats, Lan!</li>
 									
 							
 							</section>
