--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
 
 						<h2>Publications</h2>
 	
-<p> * indicates names are Dr. Tang's students/postdocs </p>
+<p> * indicates names are Dr. Tang's advisees </p>
 							
 <p><a href=""><strong>Multi-trait analysis of rare-variant association summary statistics using MTAR.</strong></a><br>
 *Luo L, Shen J, Zhang H, Chhibber A, Mehrotra DV, <strong>Tang ZZ</strong> (2020).<br>   
