--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,10 @@
 *Luo L, Shen J, Zhang H, Chhibber A, Mehrotra DV, <strong>Tang ZZ</strong> (2020).<br>   
 <em>Nature Communications</em>, accepted.</p>
 	
+<p><a href=""><strong>Soy food intake associates with changes in the metabolome and reduced blood pressure in a gut microbiota dependent manner.</strong></a><br>
+Shah RD, <strong>Tang ZZ</strong>, Chen G, Huang S, Ferguson JF (2020).<br>   
+<em>Nutrition, Metabolism and Cardiovascular Diseases</em>, accepted.</p>
+							
 <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S2213260020300114"><strong>Expression quantitative trait locus fine mapping of the 17q12–21 asthma locus in African American children: a genetic association and gene expression study.</strong></a><br>
 Ober C, ..., <strong>ECHO-CREW investigators</strong> (2020).<br>   
 <em>The Lancet Respiratory Medicine</em>, 8(5), 482-492.</p>
