--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
 *Luo L, Shen J, Zhang H, Chhibber A, Mehrotra DV, <strong>Tang ZZ</strong> (2020).<br>   
 <em>Nature Communications</em>, accepted.</p>
 	
-<p><a href=""><strong>Soy food intake associates with changes in the metabolome and reduced blood pressure in a gut microbiota dependent manner.</strong></a><br>
+<p><a href="https://nam04.safelinks.protection.outlook.com/?url=https%3A%2F%2Fdoi.org%2F10.1016%2Fj.numecd.2020.05.001&amp;data=02%7C01%7Cjane.f.ferguson%40vanderbilt.edu%7C5e181774151848b4854108d7fb56345e%7Cba5a7f39e3be4ab3b45067fa80faecad%7C0%7C0%7C637254219976420651&amp;sdata=cTF00VL%2Fd42ntDXhi%2BcvDZzYP7gJRm0kzcblXwJ5VDY%3D&amp;reserved=0"><strong>Soy food intake associates with changes in the metabolome and reduced blood pressure in a gut microbiota dependent manner.</strong></a><br>
 Shah RD, <strong>Tang ZZ</strong>, Chen G, Huang S, Ferguson JF (2020).<br>   
 <em>Nutrition, Metabolism and Cardiovascular Diseases</em>, accepted.</p>
 							
