--- a/publications.html
+++ b/publications.html
@@ -45,13 +45,13 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
-<p><a href=""><strong>Multi-trait analysis of rare-variant association summary statistics using MTAR.</strong></a><br>
+<p><a href="https://rdcu.be/b4Eq6"><strong>Multi-trait analysis of rare-variant association summary statistics using MTAR.</strong></a><br>
 *Luo L, Shen J, Zhang H, Chhibber A, Mehrotra DV, <strong>Tang ZZ</strong> (2020).<br>   
-<em>Nature Communications</em>, accepted.</p>
+<em>Nature Communications</em>, 10.1038/s41467-020-16591-0.</p>
 	
 <p><a href="https://nam04.safelinks.protection.outlook.com/?url=https%3A%2F%2Fdoi.org%2F10.1016%2Fj.numecd.2020.05.001&amp;data=02%7C01%7Cjane.f.ferguson%40vanderbilt.edu%7C5e181774151848b4854108d7fb56345e%7Cba5a7f39e3be4ab3b45067fa80faecad%7C0%7C0%7C637254219976420651&amp;sdata=cTF00VL%2Fd42ntDXhi%2BcvDZzYP7gJRm0kzcblXwJ5VDY%3D&amp;reserved=0"><strong>Soy food intake associates with changes in the metabolome and reduced blood pressure in a gut microbiota dependent manner.</strong></a><br>
 Shah RD, <strong>Tang ZZ</strong>, Chen G, Huang S, Ferguson JF (2020).<br>   
-<em>Nutrition, Metabolism and Cardiovascular Diseases</em>, accepted.</p>
+<em>Nutrition, Metabolism and Cardiovascular Diseases</em>, 10.1016/j.numecd.2020.05.001.</p>
 							
 <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S2213260020300114"><strong>Expression quantitative trait locus fine mapping of the 17q12–21 asthma locus in African American children: a genetic association and gene expression study.</strong></a><br>
 Ober C, ..., <strong>ECHO-CREW investigators</strong> (2020).<br>   
