--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@ Lange LA, Hu Y, Zhang H, Xue C, Schmidt EM, <strong>Tang ZZ</strong>, ..., Wille
 
 <p><a href="http://www.pnas.org/content/110/30/12247.full"><strong>Quantitative trait analysis in sequencing studies under trait-dependent sampling</strong></a><br>
 Lin DY, Zeng D, <strong>Tang ZZ</strong> (2013). <br>
-<em>Proceedings of the National Academy of Sciences of the United States of America</em>, 110, 12247;12252</p>
+<em>Proceedings of the National Academy of Sciences of the United States of America</em>, 110, 12247-12252</p>
 
 <p><a href="http://science.sciencemag.org/content/337/6090/100"><strong>An abundance of rare functional variants in 202 drug target genes sequenced in 14,002 people.</strong></a><br>
 Nelson MR, Wegmann D, Ehm MG, Kessner D, Jean PS, Verzilli C, Shen J, <strong>Tang Z</strong>, ..., Novembre J, Mooser V (2012).<br>
