--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 						        <section>
 							<h2>News</h2>
+								<li>07/27/2020 Our PSCAN paper has been accepted in <strong>Genome Biology</strong>. PSCAN is a protein-structure-guided scan method for testing gene-level associations and identifying signal regions, available at: <a href="https://doi.org/10.5281/zenodo.3743918">https://doi.org/10.5281/zenodo.3743918</a>.</li>	
+								<br>
 							        <li>05/09/2020 Lan's MTAR paper has been accepted in <strong>Nature Communications</strong>. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: <a href="https://cran.r-project.org/web/packages/MTAR">https://cran.r-project.org/web/packages/MTAR</a>.</li>	
 								<br>
 								<li>02/27/2020 Lan Luo won ENAR and ASA Distinguished Student Paper Awards. Congrats, Lan!</li>
