--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,11 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
+<p><a href="https://rdcu.be/b4Eq6"><strong>PSCAN: Spatial scan tests guided by protein structures improve complex disease gene discovery and signal variant
+detection.</strong></a><br>
+<strong>Tang ZZ</strong>, Sliwoski GR, Chen G, Jin B, Bush WS, Li B, Capra JA (2020).<br>   
+<em>Genome Biology</em>, accepted.</p>
+							
 <p><a href="https://rdcu.be/b4Eq6"><strong>Multi-trait analysis of rare-variant association summary statistics using MTAR.</strong></a><br>
 *Luo L, Shen J, Zhang H, Chhibber A, Mehrotra DV, <strong>Tang ZZ</strong> (2020).<br>   
 <em>Nature Communications</em>, 10.1038/s41467-020-16591-0.</p>
