--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
-<p><a href="https://rdcu.be/b4Eq6"><strong>PSCAN: Spatial scan tests guided by protein structures improve complex disease gene discovery and signal variant
+<p><a href=""><strong>PSCAN: Spatial scan tests guided by protein structures improve complex disease gene discovery and signal variant
 detection.</strong></a><br>
 <strong>Tang ZZ</strong>, Sliwoski GR, Chen G, Jin B, Bush WS, Li B, Capra JA (2020).<br>   
 <em>Genome Biology</em>, accepted.</p>
