--- a/software.html
+++ b/software.html
@@ -59,7 +59,7 @@ PSCAN methods are built upon flexibly shaped spatial scan statistics, with scan 
 PSCAN performs fast gene-level association tests by combining SNP-set-based testing p-values across windows using Cauchy method. 	
 In addition, PSCAN implements an efficient search algorithm for the detection of multiple
 signal regions in protein space.</p>
-<a href="https://uwmadison.box.com/s/ek3w3ru47tcmwyip58wxr2iioan0bhhe" class="button" download="download"><font style="text-transform: none;"> Download PSCAN v1.1 </font></a>
+<a href="https://github.com/tangzheng1/PSCAN" class="button" download="download"><font style="text-transform: none;"> Download PSCAN v1.1 </font></a>
 </footer>
 </section>
 							
