--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 						        <section>
 							<h2>News</h2>
+								<li>08/20/2020 We received an R01 from NIGMS to develop methods for microbiome data. Looking forward to the fun research ahead of us!
 								<li>07/27/2020 Our PSCAN paper has been accepted in <strong>Genome Biology</strong>. PSCAN is a protein-structure-guided scan method for testing gene-level associations and identifying risk variants on the protein space, available <a href="https://github.com/tangzheng1/PSCAN">here</a>.</li>	
 								<br>
 							        <li>05/09/2020 Lan's MTAR paper has been accepted in <strong>Nature Communications</strong>. Good job, Lan! MTAR is a method for multi-trait analysis of rare-variant association studies, available at: <a href="https://cran.r-project.org/web/packages/MTAR">https://cran.r-project.org/web/packages/MTAR</a>.</li>	
