--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,10 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
+<p><a href=""><strong>A comprehensive analysis comparing linear and generalized linear models in detecting adaptive SNPs.</strong></a><br>
+*Luo L, <strong>Tang ZZ</strong>, Schoville S, Zhu J (2020).<br>   
+<em>Molecular Ecology Resources</em>.</p>
+							
 <p><a href="https://rdcu.be/b6t01"><strong>PSCAN: Spatial scan tests guided by protein structures improve complex disease gene discovery and signal variant
 detection.</strong></a><br>
 <strong>Tang ZZ</strong>, Sliwoski GR, Chen G, Jin B, Bush WS, Li B, Capra JA (2020).<br>   
