--- a/publications.html
+++ b/publications.html
@@ -45,9 +45,9 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
-<p><a href=""><strong>A comprehensive analysis comparing linear and generalized linear models in detecting adaptive SNPs.</strong></a><br>
+<p><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/1755-0998.13298"><strong>A comprehensive analysis comparing linear and generalized linear models in detecting adaptive SNPs.</strong></a><br>
 *Luo L, <strong>Tang ZZ</strong>, Schoville S, Zhu J (2020).<br>   
-<em>Molecular Ecology Resources</em>.</p>
+<em>Molecular Ecology Resources</em>, https://doi.org/10.1111/1755-0998.13298 </p>
 							
 <p><a href="https://rdcu.be/b6t01"><strong>PSCAN: Spatial scan tests guided by protein structures improve complex disease gene discovery and signal variant
 detection.</strong></a><br>
