--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,10 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
+<p><a href=""><strong>Gut microbiome variation modulates the effects of dietary fiber on host metabolism.</strong></a><br>
+Murga-Garrido SM, *Hong Q, Cross T-W, Hutchison E, Han J, Thomas S, Vivas EI, Denu J, Ceschin DG, <strong>Tang ZZ</strong>, Rey F (2020).<br>   
+<em>Microbiome</em>, Accepted </p>
+							
 <p><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/1755-0998.13298"><strong>A comprehensive analysis comparing linear and generalized linear models in detecting adaptive SNPs.</strong></a><br>
 *Luo L, <strong>Tang ZZ</strong>, Schoville S, Zhu J (2020).<br>   
 <em>Molecular Ecology Resources</em>, https://doi.org/10.1111/1755-0998.13298 </p>
