--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 							
-<p><a href=""><strong>Gut microbiome variation modulates the effects of dietary fiber on host metabolism.</strong></a><br>
+<p><a href="https://rdcu.be/ck1JA"><strong>Gut microbiome variation modulates the effects of dietary fiber on host metabolism.</strong></a><br>
 Murga-Garrido SM, *Hong Q, Cross T-W, Hutchison E, Han J, Thomas S, Vivas EI, Denu J, Ceschin DG, <strong>Tang ZZ</strong>, Rey F (2021).<br>   
 <em>Microbiome</em>, accepted </p>
 							
