--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
 							
 <p><a href="https://rdcu.be/ck1JA"><strong>Gut microbiome variation modulates the effects of dietary fiber on host metabolism.</strong></a><br>
 Murga-Garrido SM, *Hong Q, Cross T-W, Hutchison E, Han J, Thomas S, Vivas EI, Denu J, Ceschin DG, <strong>Tang ZZ</strong>, Rey F (2021).<br>   
-<em>Microbiome</em>, accepted </p>
+<em>Microbiome</em>, 9, 117. https://doi.org/10.1186/s40168-021-01061-6 </p>
 							
 <p><a href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/1755-0998.13298"><strong>A comprehensive analysis comparing linear and generalized linear models in detecting adaptive SNPs.</strong></a><br>
 *Luo L, <strong>Tang ZZ</strong>, Schoville S, Zhu J (2020).<br>   
