--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 						        <section>
 							<h2>News</h2>
+								<li>09/20/2021 We received funds from NSF (PI: Guanhua Chen) to develop methods for microbiome data. </li>
+								<br>
 								<li>08/20/2020 We received an R01 from NIGMS to develop methods for microbiome data. Looking forward to the fun research ahead of us!</li>
 								<br>
 								<li>07/27/2020 Our PSCAN paper has been accepted in <strong>Genome Biology</strong>. PSCAN is a protein-structure-guided scan method for testing gene-level associations and identifying risk variants on the protein space, available <a href="https://github.com/tangzheng1/PSCAN">here</a>.</li>	
