--- a/people.html
+++ b/people.html
@@ -56,7 +56,7 @@
 	                <br style = “line-height:10;”>
 				    <p> 
 					<h3>Zhoujingpeng Wei</h3>
-					MS Student in Biostatistics and Medical Informatics. zwei74@wisc.edu
+					PhD Student in Biostatistics and Medical Informatics. zwei74@wisc.edu
                     </p> 
 					
 				    <p> 
