--- a/publications.html
+++ b/publications.html
@@ -45,9 +45,9 @@
 	
 <p> * indicates names are Dr. Tang's advisees </p>
 
-<p><a href="https://rdcu.be/ck1JA"><strong>Upper respiratory tract bacterial-immune interactions during respiratory syncytial virus infection in infancy.</strong></a><br>
+<p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0091674921013919"><strong>Upper respiratory tract bacterial-immune interactions during respiratory syncytial virus infection in infancy.</strong></a><br>
 Rosas-Salazar C, <strong>Tang ZZ</strong>, Shilts MH, Turi KN, *Hong Q, Wiggins DA, Lynch CE, Gebretsadik T, Chappell JD, Peebles Jr RS, Anderson LJ (2021).<br>   
-<em>Journal of Allergy and Clinical Immunology</em>. </p>
+<em>Journal of Allergy and Clinical Immunology</em>, https://doi.org/10.1016/j.jaci.2021.08.022 </p>
 							
 <p><a href="https://rdcu.be/ck1JA"><strong>Gut microbiome variation modulates the effects of dietary fiber on host metabolism.</strong></a><br>
 Murga-Garrido SM, *Hong Q, Cross T-W, Hutchison E, Han J, Thomas S, Vivas EI, Denu J, Ceschin DG, <strong>Tang ZZ</strong>, Rey F (2021).<br>   
