--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
 <p> * indicates names are Dr. Tang's advisees </p>
 
 <p><a href="http://arxiv.org/abs/2109.01107"><strong>A phylogeny-based test of mediation effect in microbiome.</strong></a><br>
-Hong Q, Chen G, and <strong>Tang ZZ</strong>(2021).<br>
+*Hong Q, Chen G, and <strong>Tang ZZ</strong>(2021).<br>
 <em>arXiv preprint arXiv:2109.01107</em></p>
 							
 <p><a href="https://link.springer.com/article/10.1007/s12561-019-09251-5"><strong>Robust and powerful differential composition tests for clustered microbiome data.</strong></a><br>
