--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,10 @@
 						<h2>Publications</h2>
 	
 <p> * indicates names are Dr. Tang's advisees </p>
+							
+<p><a href=""><strong>Exclusive breastfeeding, the early-life microbiome and immune response, and common childhood respiratory illnesses.</strong></a><br>
+Rosas-Salazar C, Shilts MH, <strong>Tang ZZ</strong>, *Hong Q, Turi KN, Snyder BM, Wiggins DA, Lynch CE, Gebretsadik T, Peebles RS, Anderson LJ, Das SR, and Hartert TV (2022).<br>
+<em>Journal of Allergy and Clinical Immunology, accepted.</em></p>
 
 <p><a href="http://arxiv.org/abs/2109.01107"><strong>A phylogeny-based test of mediation effect in microbiome.</strong></a><br>
 *Hong Q, Chen G, and <strong>Tang ZZ</strong>(2021).<br>
