--- a/people.html
+++ b/people.html
@@ -47,7 +47,7 @@
 					<p> 
 					<img src="images/PI.JPG" alt="Image" class="left" width="200"  />
 					<h3>ZhengZheng (Jane) Tang</h3>
-					Assistant Professor, UW-Madison<br>
+					Associate Professor, UW-Madison<br>
 					<li>Department of Biostatistics and Medical Informatics</li>
 					<li>Department of Statistics</li>
 					<li>Wisconsin Institute for Discovery (WID)</li>
