--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 						<div class="8u 12u(mobile)">
 
 							<section>
-								<p> Mailing address: 330 N Orchard St, Madison, WI 53715, United States </p>
-								<p>	 </p>
+								<p>  Email: tang@biostat.wisc.edu   </p>
+								
 							</section>
 
 						</div>
@@ -95,7 +95,7 @@
 
 							<section>
 								<p> Email: tang@biostat.wisc.edu </p>
-								<p>	 </p>
+							
 							</section>
 
 						</div>
