--- a/publications.html
+++ b/publications.html
@@ -180,8 +180,8 @@ Sun W, Wright FA, <strong>Tang Z</strong>, Nordgard SH, Van Loo P, Yu T, Kristen
 						<div class="8u 12u(mobile)">
 
 							<section>
-								<p> Mailing address: 330 N Orchard St, Madison, WI 53715, United States </p>
-								<p>	Office location: WID 3166 </p>
+								<p> Email: tang@biostat.wisc.edu </p>
+								
 							</section>
 
 						</div>
@@ -189,7 +189,7 @@ Sun W, Wright FA, <strong>Tang Z</strong>, Nordgard SH, Van Loo P, Yu T, Kristen
 
 							<section>
 								<p> Email: tang@biostat.wisc.edu </p>
-								<p>	Office phone: (608) 316-4643 </p>
+								
 							</section>
 
 						</div>
