--- a/software.html
+++ b/software.html
@@ -156,8 +156,8 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 						<div class="8u 12u(mobile)">
 
 							<section>
-								<p> Mailing address: 330 N Orchard St, Madison, WI 53715, United States </p>
-								<p>	Office location: WID 3166 </p>
+								<p> Email: tang@biostat.wisc.edu </p>
+								
 							</section>
 
 						</div>
@@ -165,7 +165,7 @@ These functions allow users to (a) perform tests on multivariate taxon counts; (
 
 							<section>
 								<p> Email: tang@biostat.wisc.edu </p>
-								<p>	Office phone: (608) 316-4643 </p>
+								
 							</section>
 
 						</div>
